# smash-brothers-ultimate

./: .buildinfo  .gitignore  .gitmodules  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  searchindex.js
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: environment.pickle  index.doctree
.doctrees/character/: index.doctree  tier.doctree
.doctrees/modules/: modules.doctree  smash_brothers_ultimate.doctree
.doctrees/ref/: index.doctree  ref.doctree
.doctrees/stage/: index.doctree
_sources/character/: index.rst.txt
_sources/modules/: modules.rst.txt  smash_brothers_ultimate.rst.txt
_sources/ref/: index.rst.txt  ref.md.txt
_sources/stage/: index.rst.txt
character/: index.html  tier.html
character/64/: 10_ness.html  11_captain_falcon.html  12_jigglypuff.html  1_mario.html  2_donkey_kong.html  3_link.html  4__dark_samus.html  4_samus.html  5_yoshi.html  6_kirby.html  7_fox.html  8_pikachu.html  9_luigi.html  index.html
character/dx/: 13__daisy.html  13_peach.html  14_bowser.html  15_ice_climber.html  16_sheik.html  17_zelda.html  18_dr_mario.html  19_pichu.html  20_falco.html  21__luchina.html  21_marth.html  22_young_link.html  23_ganondorf.html  24_mewtwo.html  25__chrom.html  25_roy.html  26_mr_game_and_watch.html  index.html
character/for/: 45_villager.html  46_mega_man.html  47_wii_fit_trainer.html  49_little_mac.html  (+17 more)
docs/: index.html
modules/: modules.html  smash_brothers_ultimate.html
ref/: index.html  ref.html
scripts/: create_docs.sh  setup_devenv.sh
stage/: index.html
(+318 files in other folders)
