[tool.poetry]
name = "smash_brothers_ultimate"
version = "0.0.0"
description = "This repositry is a documentation of SSBU."
authors = ["H. S."]

[tool.poetry.dependencies]
python = "3.8.9"

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
commonmark = "^0.9.1"
recommonmark = "^0.7.1"
sphinx-markdown-tables = "^0.0.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
